--- a/4Short_Stack/views/layout.erb
+++ b/4Short_Stack/views/layout.erb
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+<link href="../css/normalize.css" rel="stylesheet" type="text/css">
+ <link href="../css/skeleton.css" rel="stylesheet" type="text/css">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
