--- a/4Short_Stack/views/makeProject.erb
+++ b/4Short_Stack/views/makeProject.erb
@@ -20,7 +20,7 @@
 
   <label for="description">Description: </label>
   <textarea class="u-full-width" placeholder="Describe your project." name="description"></textarea>
-  <input class="button-primary" type="submit" value="Send">
+  <input class="button-primary" type="submit" value="Submit!">
 
     </form>
 </div>
