--- a/4Short_Stack/views/project.erb
+++ b/4Short_Stack/views/project.erb
@@ -1,8 +1,15 @@
 <u><h2>Project: <%= @project["title"]%></h2></u>
 
 <div>
+<u><h5>Details:</h5></u>
 <li><a href="<%= @project["url"]%>">Project Link</a></li>
-<p> <%= @project["description"] %></p>
+<p>"<%= @project["description"] %>"</p>
 </div>
 
 <!-- put in comments later -->
+<form class="comment" action="/projects" method="post">
+
+<label for="description">Comment: </label>
+  <textarea class="u-half-width" placeholder="Write your comment here." name="comment"></textarea><br>
+  <input class="button-primary" type="submit" value="comment!">
+</form>
