--- a/4Short_Stack/views/index.erb
+++ b/4Short_Stack/views/index.erb
@@ -1,10 +1,10 @@
-<u><h1>Welcome to StackChan</h1></u>
+<u><h1>Welcome to StackChan!</h1></u>
 
 <h2>Click on a project to go to the thread.</h2>
 <h2>Or, make a project <a href="/makeProject">here!</a></h2>
 
 
-<u><h4>Forums</h4></u>
+<u><h4>Projects</h4></u>
 <ul>
 <% @projects.each do |project| %>
   <li>
